force-app/main/default/objects/Custom_Field_Mapping__c/Custom_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Custom Field Mapping</label>
    <pluralLabel>Custom Field Mappings</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CFM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>