force-app/main/default/objects/Custom_Field_Mapping__c/fields/Address_Group__c.field-meta.xml
<CustomField>
    <fullName>Address_Group__c</fullName>
    <label>Address Group</label>
    <type>Text</type>
    <length>100</length>
</CustomField>