force-app/main/default/objects/Custom_Field_Mapping__c/fields/Default_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Default_Visibility__c</fullName>
    <label>Default Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Visible</fullName>
                <default>true</default>
                <label>Visible</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>