force-app/main/default/objects/Custom_Field_Mapping__c/fields/Field_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Override__c</fullName>
    <label>Field Label Override</label>
    <type>Text</type>
    <length>255</length>
</CustomField>