force-app/main/default/objects/Custom_Field_Mapping__c/fields/Field_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Field_Subtype__c</fullName>
    <label>Field Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Address_Street</fullName>
            </value>
            <value>
                <fullName>Address_City</fullName>
            </value>
            <value>
                <fullName>Address_State</fullName>
            </value>
            <value>
                <fullName>Address_PostalCode</fullName>
            </value>
            <value>
                <fullName>Address_Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>