force-app/main/default/objects/Custom_Field_Mapping__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Text</type>
    <length>100</length>
    <inlineHelpText>Captured at sync e.g. Text, Picklist, Date, Lookup</inlineHelpText>
</CustomField>