force-app/main/default/objects/Custom_Field_Mapping__c/fields/Group_Label__c.field-meta.xml
<CustomField>
    <fullName>Group_Label__c</fullName>
    <label>Group Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>