force-app/main/default/objects/Custom_Field_Mapping__c/fields/Group_Primary__c.field-meta.xml
<CustomField>
    <fullName>Group_Primary__c</fullName>
    <label>Group Primary</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>