force-app/main/default/objects/Custom_Field_Mapping__c/fields/Group_With__c.field-meta.xml
<CustomField>
    <fullName>Group_With__c</fullName>
    <label>Group With</label>
    <type>Text</type>
    <length>255</length>
</CustomField>