force-app/main/default/objects/Custom_Field_Mapping__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <type>Text</type>
    <length>255</length>
</CustomField>