force-app/main/default/objects/Custom_Field_Mapping__c/fields/Is_Always_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Always_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field is a system-required field synced from the layout. Read-only and required are locked.</description>
    <label>Is Always Required</label>
    <type>Checkbox</type>
</CustomField>