force-app/main/default/objects/Custom_Field_Mapping__c/fields/Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_Only__c</fullName>
    <label>Is Read Only</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>