force-app/main/default/objects/Custom_Field_Mapping__c/fields/Is_Required_Layout__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Layout__c</fullName>
    <label>Is Required Layout</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From layout sync</inlineHelpText>
</CustomField>