force-app/main/default/objects/Custom_Field_Mapping__c/fields/Reference_To__c.field-meta.xml
<CustomField>
    <fullName>Reference_To__c</fullName>
    <label>Reference To</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Target object API name if Field Type is Lookup</inlineHelpText>
</CustomField>