force-app/main/default/objects/Custom_Field_Mapping__c/fields/Regex_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Regex_Error_Message__c</fullName>
    <label>Regex Error Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>