force-app/main/default/objects/Custom_Field_Mapping__c/fields/Regex_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Regex_Pattern__c</fullName>
    <label>Regex Pattern</label>
    <type>Text</type>
    <length>255</length>
</CustomField>