force-app/main/default/objects/Custom_Field_Mapping__c/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <label>Section Label</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Groups fields into sections on the form</inlineHelpText>
</CustomField>