force-app/main/default/objects/Custom_Field_Mapping__c/fields/Split_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Split_Pattern__c</fullName>
    <label>Split Pattern</label>
    <type>Text</type>
    <length>255</length>
</CustomField>